# Image-Segmentation

./: .getginore  CMakeLists.txt  README.md
include/: Grafo.h  Imagem.h  UnionFind.h
src/: Grafo.cpp  Imagem.cpp  UnionFind.cpp  main.cpp
